Fix spacing in amount picker

--- a/styles/Utils.module.css
+++ b/styles/Utils.module.css
@@ -42,7 +42,7 @@
 */
 .numberInput {
     width: 60px;
-    margin: 0 8px;
+    margin: 0 8px 0 5px;
 }
 
 /* Chrome, Safari, Edge, Opera */
